# Geek

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Geek.sln  README.md  StackWalk.hpp  geek.sln  geekConfig.cmake.in  ring_queue.hpp  ts_ring_queue.hpp
File/: File.vcxproj  File.vcxproj.filters  file.hpp
Geek/: Geek.vcxproj  ReadMe.txt
Handle/: Handle.vcxproj  Handle.vcxproj.filters  Handle_x64d_s.idb  Handle_x64d_s.lib  ReadMe.txt  handle.cpp  handle.h  handle.hpp
Hook/: Hook.vcxproj  Hook.vcxproj.filters  inline_hook.h  inline_hook.hpp  page_hook.h  page_hook.hpp
Http/: WinHttp.hpp
Inject/: Inject.vcxproj  Inject.vcxproj.filters  remote_thread_injection.hpp
Memory/: Memory.vcxproj  Memory.vcxproj.filters  memory.hpp
Module/: Module.vcxproj  Module.vcxproj.filters  module.hpp
PE/: PE.vcxproj  PE.vcxproj.filters  ReadMe.txt  image.hpp  module.h  module.hpp
Pipe/: Pipe.vcxproj  Pipe.vcxproj.filters  pipe.hpp
Process/: Process.vcxproj  Process.vcxproj.filters  Process_x64d_s.idb  Process_x64d_s.lib  ReadMe.txt  memory_block.hpp  module.hpp  ntinc.h  process.h  process.hpp
SignatureCode/: SignatureCode.hpp  SignatureCode.vcxproj  SignatureCode.vcxproj.filters  signature_code.hpp
String/: string.hpp
Test/: Test.cpp  Test.vcxproj
Thread/: Thread.vcxproj  Thread.vcxproj.filters  thread.hpp
comm/: pipe.hpp  share_memory.hpp
example/: CMakeLists.txt  main.cpp
file/: file.hpp
geek/: CMakeLists.txt  debug.cpp  error.cpp  errordefs.h  file.cpp  geek.vcxproj  geek.vcxproj.filters  image.cpp  image_base_relocation.cpp  image_data_directory.cpp  image_impl.cpp  image_impl.h  image_nt_header.cpp  image_optional_header.cpp  image_section_header_table.cpp  inline_hook.cpp  module_info.cpp  process.cpp
geek/asm/: asm_ops.cpp  assembler.cpp  assembler_impl.cpp  assembler_impl.h  assembler_p.cpp  assembler_p_impl.cpp  assembler_p_impl.h  mem_impl.cpp  mem_impl.h
geek/hook/: inline_hook.cpp  insn_len.h  page_hook.cpp
geek/pe/: image_impl.cpp  image_impl.h
geek/pe/data_directory/: image_base_relocation.cpp
geek/process/: debug.cpp  list_entry.cpp  memory_info.cpp  module_list.cpp  process.cpp  process_info.cpp  process_list.cpp  thread.cpp
geek/utils/: converter.cpp  debug.cpp  debug.h  searcher.cpp
geek/x64/Release/geek.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  geek.lastbuildstate
handle/: handle.hpp
hook/: iat_hook.hpp  inline_hook.hpp  page_hook.hpp
http/: win_http.hpp
include/geek/: error.h  global.h  handle.hpp  文档.md
include/geek/asm/: asm_ops.h  asm_regs.h  assembler.h  assembler_p.h  disassembler.h  regs.h
include/geek/asm/assembler/: asm_op.h  asm_op_defs.h  asm_reg.h
include/geek/comm/: pipe.hpp  share_memory.hpp
include/geek/file/: file.hpp
include/geek/hook/: iat_hook.hpp  inline_hook.h  inline_hook.hpp  page_hook.h  page_hook.hpp
include/geek/network/: http.hpp
include/geek/pe/: image.h  image.hpp  image_data_directory.h  image_nt_header.h  image_optional_header.h  image_section_header_table.h
include/geek/pe/data_directory/: image_base_relocation.h
include/geek/process/: address.h  debug.h  debug.hpp  memory_info.h  memory_info.hpp  module_info.h  module_info.hpp  module_list.h  ntinc.h  process.h  process.hpp  process_info.h  process_info.hpp  process_list.h  thread.h
include/geek/sign_searcher/: sign_searcher.hpp
include/geek/string/: string.hpp
include/geek/system/: system.hpp
include/geek/thread/: thread.hpp
include/geek/utils/: converter.h  debug.h  file.h  handle.h  image_section_header.cpp  property.h  searcher.h  strutil.h
include/geek/wow64ext/: CMemPtr.h  internal.h  wow64ext.h  wow64ext.hpp
network/: http.hpp
pe/: image.hpp
pe_/: image.hpp
pipe/: pipe.hpp
process/: memory_block.hpp  memory_info.hpp  module.hpp  module_info.hpp  process.hpp  process_info.hpp
signature_code/: signature_code.hpp
src/: CMakeLists.txt  handle.cpp
src/asm/: assembler.cpp  assembler_impl.cpp  assembler_impl.h  disassembler.cpp  disassembler_impl.cpp  disassembler_impl.h
src/asm/assembler/: asm_op.cpp  asm_op_defs.cpp  asm_op_defs_impl.cpp  asm_op_defs_impl.h
src/hook/: inline_hook.cpp
src/pe/: image.cpp  image_data_directory.cpp  image_section_header_table.cpp
src/pe/data_directory/: image_base_relocation.cpp
src/process/: address.cpp  list_entry.h  module_list.cpp  process.cpp  process_list.cpp
src/utils/: debug.cpp  debug.h  file.cpp  strutil.cpp
src/wow64ext/: wow64ext.cpp
string/: string.hpp
sync/: event.hpp
system/: system.hpp
thread/: thread.hpp
wow64ext/: CMemPtr.h  internal.h  wow64ext.h  wow64ext.hpp  wow64ext.vcxproj  wow64ext.vcxproj.filters
